welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: not found: value ec
  ec = Math.abs(100-n)
  ^nearHundred:3: error: not found: value ed
  ed = Math.abs(200-n)
  ^nearHundred:4: error: not found: value ec
  if(ec<10 || ed< 10){return true}
     ^nearHundred:4: error: not found: value ed
  if(ec<10 || ed< 10){return true}
              ^