welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
  ec = Math.abs(100-n)
  ed = Math.abs(200-n)
  if(ec<10 || ed< 10){return true}
  else{return false}
  
}